issue with small images on smaller screens (object-fit: contain) causes image to bloat - otherwise works correctly for larger files on smaller and larger screens

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,11 @@ img {
   box-shadow: none;
   transition: all 0.12s linear 0s !important;
 }
-
+.upload-label.image-has-been-uploaded{
+  left: -48%;
+  top: 50%;
+  transform: rotate(-90deg);
+}
 
 .uploaded-image {
   width: 100%;
